--- a/src/pages/results/styles.module.scss
+++ b/src/pages/results/styles.module.scss
@@ -1,30 +1,16 @@
 .inputTodo {
-  padding: 12px 24px !important;
+  padding: 6px !important;
   width: 100%;
 }
 .btnAdd {
   padding: 22px 24px !important;
-}
-.filter {
-  gap: 6px;
-  min-width: 100%;
-  text-align: center;
-  flex-direction: column;
-  
-  @media (min-width:640px) {
-    flex-direction: row;
-    height: 40px;
-  }
-  @media (min-width: 768px) {
-    min-width: 80%;
-    min-height: 42px;
-  }
-    :global(.ant-radio-button-wrapper) {
-      width: 100% !important;
-      height: auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 0px !important;
+  background-color: black;
+  color: white;
+  font-weight: 600;
+  font-size: 18px;
+  &:hover{
+   background-color: black !important;
+   color: white !important;
+   padding: 22px 24px !important;
   }
 }
